test/invalid/idl/operation-too-special.widl
interface Ako {
    getter setter void maki();
};
